--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   fix-version:
     name: 🧩 Fix & Update Version
-    if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'Bump version')
     runs-on: ubuntu-latest
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
@@ -37,7 +36,12 @@ jobs:
             minor=$((minor+1))
             patch=0
           fi
-          new_tag="$major.$minor.$patch"
+          if [ "$GITHUB_REF" == "refs/heads/main" ]; then
+            suffix=""
+          else
+            suffix="-dev"
+          fi
+          new_tag="$major.$minor.$patch$suffix"
           echo "new_tag=$new_tag" >> $GITHUB_ENV
           echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
           echo "Bumped to $new_tag"
