--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -213,7 +213,7 @@ jobs:
 
       - name: Tag & Push
         run: |
-          IMAGE="registry.login.no/${{ secrets.GITLAB_PROJECT }}"
+          IMAGE="${{ secrets.DOCKER_REGISTRY }}/${{ secrets.GITLAB_PROJECT }}"
           VERSION=${{ needs.fix-version.outputs.new_tag }}
           docker compose build
           docker tag beebuilt_app $IMAGE:$VERSION
@@ -234,7 +234,7 @@ jobs:
       - name: Update image version
         run: |
           cd kuberepo
-          yq e -i '.spec.template.spec.containers[0].image = "registry.login.no/${{ secrets.GITLAB_PROJECT }}:${{ needs.fix-version.outputs.new_tag }}"' deployment.yaml
+          yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_REGISTRY }}/${{ secrets.GITLAB_PROJECT }}:${{ needs.fix-version.outputs.new_tag }}"' deployment.yaml
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git commit -am "Update BeeBuilt image to ${{ needs.fix-version.outputs.new_tag }}"
