--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: ["dev", "main"]
 
+env:
+  GIT_USER_NAME: BeeBuilt Bot
+  GIT_USER_EMAIL: beebuiltbot@login.no
+
 jobs:
   fix-version:
     name: 🧩 Fix & Update Version
@@ -77,16 +81,16 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.name "BeeBuilt Bot"
-          git config --global user.email "beebuiltbot@login.no"
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
           git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
           git commit -m "v$new_tag" || echo "No changes to commit"
           git push origin main
 
       - name: Create Git Tag
         run: |
-          git config --global user.name "BeeBuilt Bot"
-          git config --global user.email "beebuiltbot@login.no"
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
           git tag ${{ env.new_tag }}
           git push origin ${{ env.new_tag }}
 
@@ -104,8 +108,8 @@ jobs:
 
       - name: Configure git
         run: |
-          git config --global user.name "BeeBuilt Bot"
-          git config --global user.email "beebuiltbot@login.no"
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
 
       - name: Rebase from main to dev
         run: |
