--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -240,12 +240,36 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login "${{ secrets.DOCKER_REGISTRY }}" -u "${{ secrets.DOCKER_USER }}" --password-stdin
 
       - name: Tag & Push
-        run:
-          IMAGE="${{ secrets.DOCKER_REGISTRY }}/tekkom/dev/${GITHUB_REF##*/}"
+        run: |
+          IMAGE="${{ secrets.DOCKER_REGISTRY }}/tekkom/dev/${{ github.ref_name }}"
           VERSION=${{ needs.fix-version.outputs.new_tag }}
+
+          echo "Image: $IMAGE"
+          echo "Version: $VERSION"
+
+          # Build all services
           docker compose build
-          docker tag beebuilt_app $IMAGE:$VERSION
-          docker push $IMAGE:$VERSION
+
+          # Get all service names from docker-compose.yml
+          SERVICES=$(docker compose config --services)
+
+          if [ -z "$SERVICES" ]; then
+            echo "❌ No services found in docker-compose.yml"
+            exit 1
+          fi
+
+          # Loop over services and tag/push each
+          for SERVICE in $SERVICES; do
+            echo "Processing service: $SERVICE"
+            IMAGE_ID=$(docker compose images -q $SERVICE)
+            if [ -z "$IMAGE_ID" ]; then
+              echo "❌ No image found for service $SERVICE"
+              exit 1
+            fi
+
+            docker tag "$IMAGE_ID" "$IMAGE-$SERVICE:$VERSION"
+            docker push "$IMAGE-$SERVICE:$VERSION"
+          done
 
   update:
     name: 🔄 Update Kubernetes Repo
