--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -85,7 +85,7 @@ jobs:
           git config --global user.email "$GIT_USER_EMAIL"
           git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
           git commit -m "v$new_tag" || echo "No changes to commit"
-          git push origin main
+          git push origin $GITHUB_REF_NAME
 
       - name: Create Git Tag
         run: |
