--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -185,6 +185,7 @@ jobs:
 
       - name: Check exposed ports
         run: |
+          docker compose ps --format json
           ports=$(docker compose ps --format json | jq -r '.[].Publishers[].PublishedPort')
           for port in $ports; do
             echo "Checking port $port..."
