--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -32,9 +32,26 @@ jobs:
         id: bump
         run: |
           if [ "$GITHUB_REF" == "refs/heads/main" ]; then
-            dev_version=$(git show dev:package.json | jq -r '.version')
+            dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
             current_version=$latest_tag
-            if [ "$current_version" == "$dev_version" ]; then
+            if [ -n "$dev_version" ]; then
+              if [ "$current_version" == "$dev_version" ]; then
+                version=${latest_tag#v}
+                IFS='.' read -r major minor patch <<< "$version"
+                changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
+                if [ "$changed_files" -lt 4 ]; then
+                  patch=$((patch+1))
+                else
+                  minor=$((minor+1))
+                  patch=0
+                fi
+                new_version="$major.$minor.$patch"
+                new_tag="$new_version"
+              else
+                new_version="$dev_version"
+                new_tag="$new_version"
+              fi
+            else
               version=${latest_tag#v}
               IFS='.' read -r major minor patch <<< "$version"
               changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
@@ -45,9 +62,6 @@ jobs:
                 patch=0
               fi
               new_version="$major.$minor.$patch"
-              new_tag="$new_version"
-            else
-              new_version="$dev_version"
               new_tag="$new_version"
             fi
           else
