--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -211,7 +211,7 @@ jobs:
             | jq -sr '.[] | .Publishers? // [] | .[] | .PublishedPort' \
             | sort -u)
 
-          echo ports
+          echo $ports
 
           for port in $ports; do
             echo "Checking port $port..."
